feat: added basic auth

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,8 @@
-export INTERCOM_SECRET=""
-export CLAUDE_SECRET=""
-export SLACK_BOT_TOKEN=""
-export NOTION_SECRET=""
-export NOTION_DB_ID=""
+export INTERCOM_SECRET="intercom app secret"
+export CLAUDE_SECRET="anthropic key"
+export SLACK_BOT_TOKEN="bot oauth token"
+export NOTION_SECRET="notion token"
+export NOTION_DB_ID="id of the notion db"
+export AUTH_USERNAME="basic auth username"
+export AUTH_PASSWORD="basic auth password"
+export PHX_HOST="app host"
