chore: updated .env.template

--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,8 @@ export NOTION_SECRET="notion token"
 export NOTION_DB_ID="id of the notion db"
 export AUTH_USERNAME="basic auth username"
 export AUTH_PASSWORD="basic auth password"
-export PHX_HOST="app host"
+export PHX_HOST="jump-tickets.frostbyte.com.br"
+export PHX_SERVER="true"
+export PORT="80"
+export SECRET_KEY_BASE="mix phx.gen.secret"
+export MIX_ENV=""
