feat: handle task done

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 export INTERCOM_SECRET="intercom app secret"
+export INTERCOM_ADMIN_ID="admin id for conversation responses"
 export CLAUDE_SECRET="anthropic key"
 export SLACK_BOT_TOKEN="bot oauth token"
 export NOTION_SECRET="notion token"
